# yolov5-drone

./: compile_gimbal.sh
Experiment/config/camera_config/: q10f_gimbal_640x480.yaml
Experiment/config/prometheus_control_config/: px4_sender_gps.yaml
Experiment/launch/: prometheus_mocap_formation_change.launch  prometheus_mocap_formation_control.launch  prometheus_mocap_formation_setmode.launch  prometheus_mocap_formation_square.launch
Experiment/p300/: p300_gps_control_ground.launch  p300_gps_control_onboard.launch  p300_mocap_control_onboard.launch
Experiment/sh_for_p300/: mocap_formation.sh  mocap_square.sh
Modules/common/msgs/: CMakeLists.txt
Modules/control/include/: command_to_mavros.h
Modules/control/src/: px4_pos_estimator.cpp
Modules/gimbal_control/: CMakeLists.txt  README.md  package.xml
Modules/gimbal_control/src/: gimbal_control.cpp  gimbal_serial.cpp
Modules/ground_station/include/: prometheus_station_utils.h
Modules/ground_station/src/: ground_station.cpp
Modules/mission/: CMakeLists.txt
Modules/mission/autonomous_landing/: autonomous_landing.yaml  autonomous_landing_on_ground.cpp
Modules/mission/include/: Mocap_Formation.h
Modules/mission/mocap_formation/: mocap_formation_change.cpp  mocap_formation_control.cpp  mocap_formation_getpose.cpp  mocap_formation_move.cpp  mocap_formation_setmode.cpp  mocap_formation_square.cpp  mocap_formation_state.cpp
Modules/object_detection/: CMakeLists.txt
Modules/object_detection/config/: camera_param_gazebo_monocular.yaml
Modules/object_detection/cpp_nodes/: aruco_det_v2.cpp  (+1 more)
(+45 files in other folders)
