<?xml version="1.0"?>
<package format="2">
  <name>prometheus_gimbal</name>
  <version>0.1.0</version>
  <description>The prometheus_gimbal package</description>

  <maintainer email="eason473867143@gmail.com">EasonYi</maintainer>
  <license>BSD</license>
  <url type="website">http://www.amovauto.com/</url>
  <url type="repository">https://github.com/amov-lab/Prometheus.git</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>serial</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>serial</exec_depend>
 



</package>
